--- a/package.json
+++ b/package.json
@@ -34,19 +34,35 @@
     "@coreui/icons-react": "^2.0.0",
     "@coreui/react": "^4.1.0",
     "@coreui/react-chartjs": "^2.0.0",
+    "@coreui/react-pro": "^4.1.4",
     "@coreui/utils": "^1.3.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "axios": "^0.25.0",
     "chart.js": "^3.6.0",
     "classnames": "^2.3.1",
     "core-js": "^3.19.1",
     "enzyme": "^3.11.0",
+    "i18next": "^21.6.10",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-check-expiration": "^1.0.5",
+    "multiselect-react-dropdown": "^2.0.17",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-cookies": "^0.1.1",
+    "react-custom-popup": "^1.1.3",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
+    "react-if": "^4.1.1",
+    "react-loader-spinner": "^5.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "reactjs-popup": "^2.0.5",
     "redux": "4.1.2",
+    "redux-thunk": "^2.4.1",
     "simplebar-react": "^2.3.6"
   },
   "devDependencies": {
