work on products by status

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-REACT_APP_API='https://ehorizon-api.herokuapp.com'
-XREACT_APP_API='http://localhost:5000'
+XREACT_APP_API='https://ehorizon-api.herokuapp.com'
+REACT_APP_API='http://localhost:5000'
 REACT_APP_SECRET = 12345
