--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-loader-spinner": "^5.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
