--- a/package.json
+++ b/package.json
@@ -50,16 +50,18 @@
     "jwt-check-expiration": "^1.0.5",
     "multiselect-react-dropdown": "^2.0.17",
     "prop-types": "^15.7.2",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-cookies": "^0.1.1",
     "react-custom-popup": "^1.1.3",
     "react-dom": "^17.0.2",
+    "react-dropdown-select": "^4.8.3",
     "react-i18next": "^11.15.3",
     "react-if": "^4.1.1",
     "react-loader-spinner": "^5.1.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.2.2",
     "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "redux": "4.1.2",
