--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-cookies": "^0.1.1",
+    "react-country-region-selector": "^3.4.0",
     "react-custom-popup": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.8.3",
