--- a/package.json
+++ b/package.json
@@ -36,17 +36,21 @@
     "@coreui/react-chartjs": "^2.0.0",
     "@coreui/react-pro": "^4.1.4",
     "@coreui/utils": "^1.3.1",
+    "@react-pdf/renderer": "^2.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.25.0",
     "chart.js": "^3.6.0",
     "classnames": "^2.3.1",
+    "color-picker-menu": "^2.0.0",
     "core-js": "^3.19.1",
     "enzyme": "^3.11.0",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-react": "^1.0.11",
     "jwt-check-expiration": "^1.0.5",
     "multiselect-react-dropdown": "^2.0.17",
     "prop-types": "^15.7.2",
@@ -67,7 +71,8 @@
     "reactjs-popup": "^2.0.5",
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
-    "simplebar-react": "^2.3.6"
+    "simplebar-react": "^2.3.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "auto-changelog": "~2.3.0",
