--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@coreui/coreui-free-react-admin-template",
   "version": "4.1.1",
   "description": "CoreUI Free React Admin Template",
-  "homepage": ".",
+  "homepage": "./",
+  "main": "index.js",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
@@ -13,6 +14,7 @@
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "build": "react-scripts build",
     "build:n17": "react-scripts --openssl-legacy-provider build",
     "changelog": "auto-changelog --starting-version 4.1.0 --commit-limit false --hide-credit",
@@ -40,10 +42,14 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.25.0",
+    "babel-jest": "^28.1.3",
+    "buffer": "^6.0.3",
     "chart.js": "^3.6.0",
     "classnames": "^2.3.1",
     "color-picker-menu": "^2.0.0",
     "core-js": "^3.19.1",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "enzyme": "^3.11.0",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
@@ -62,6 +68,7 @@
     "react-custom-popup": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.8.3",
+    "react-error-overlay": "^6.0.11",
     "react-i18next": "^11.15.3",
     "react-if": "^4.1.1",
     "react-loader-spinner": "^5.1.0",
@@ -72,7 +79,14 @@
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
     "simplebar-react": "^2.3.6",
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
+    "webpack": "^5.74.0",
+    "webpack-dev-server": "^4.10.0",
     "xlsx": "^0.18.5"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
     "auto-changelog": "~2.3.0",
@@ -80,11 +94,14 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "sass": "^1.43.5"
   },
   "engines": {
     "node": ">=10",
     "npm": ">=6"
+  },
+  "browser": {
+    "crypto": false
   }
 }
