--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@coreui/coreui-free-react-admin-template",
   "version": "4.1.1",
   "description": "CoreUI Free React Admin Template",
-  "homepage": "./",
-  "main": "index.js",
+  "homepage": ".",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
@@ -13,6 +12,11 @@
   },
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
+  "browser": {
+    "stream": "stream-browserify",
+    "zlib": "browserify-zlib",
+    "crypto": "crypto-browserify"
+  },
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
     "build": "react-scripts build",
@@ -31,7 +35,7 @@
   },
   "dependencies": {
     "@coreui/chartjs": "^3.0.0",
-    "@coreui/coreui": "^4.1.0",
+    "@coreui/coreui": "^4.2.1",
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-react": "^2.0.0",
     "@coreui/react": "^4.1.0",
@@ -41,67 +45,73 @@
     "@react-pdf/renderer": "^2.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "assert": "^2.0.0",
     "axios": "^0.25.0",
     "babel-jest": "^28.1.3",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "chart.js": "^3.6.0",
     "classnames": "^2.3.1",
     "color-picker-menu": "^2.0.0",
-    "core-js": "^3.19.1",
-    "crypto": "^1.0.1",
+    "core-js": "^3.24.1",
     "crypto-browserify": "^3.12.0",
+    "definitions": "^0.0.2",
     "enzyme": "^3.11.0",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
-    "jspdf": "^2.5.1",
-    "jspdf-react": "^1.0.11",
     "jwt-check-expiration": "^1.0.5",
     "multiselect-react-dropdown": "^2.0.17",
+    "postcss-loader": "^7.0.1",
+    "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
-    "react-app-polyfill": "^2.0.0",
+    "react-app-polyfill": "^3.0.0",
     "react-cookies": "^0.1.1",
     "react-country-region-selector": "^3.4.0",
     "react-custom-popup": "^1.1.3",
     "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.8.3",
-    "react-error-overlay": "^6.0.11",
     "react-i18next": "^11.15.3",
     "react-if": "^4.1.1",
     "react-loader-spinner": "^5.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "react-script": "^2.0.5",
+    "react-scripts": "^5.0.1",
     "react-switch": "^6.0.0",
     "reactjs-popup": "^2.0.5",
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
     "simplebar-react": "^2.3.6",
-    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "util": "^0.12.4",
     "webpack": "^5.74.0",
-    "webpack-dev-server": "^4.10.0",
     "xlsx": "^0.18.5"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
+    "ajv": "^7.2.4",
     "auto-changelog": "~2.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.5.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.43.5"
+    "react-error-overlay": "6.0.9",
+    "sass": "^1.54.5"
   },
   "engines": {
     "node": ">=10",
     "npm": ">=6"
   },
-  "browser": {
-    "crypto": false
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
   }
 }
