--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-REACT_APP_API='https://ehorizon-api.herokuapp.com'
-#REACT_APP_API='http://localhost:5000'
+# REACT_APP_API='https://ehorizon-api.herokuapp.com'
+REACT_APP_API='http://localhost:5000'
 REACT_APP_SECRET = 12345
 SKIP_PREFLIGHT_CHECK=true
