make some major enhancement

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
 # REACT_APP_API='https://ehorizon-api.herokuapp.com'
+# REACT_APP_API=https://horizon-api-server-43ec66823670.herokuapp.com
+GENERATE_SOURCEMAP=false
 REACT_APP_API='http://localhost:5000'
 REACT_APP_SECRET = 12345
 SKIP_PREFLIGHT_CHECK=true
