--- a/package.json
+++ b/package.json
@@ -57,22 +57,25 @@
     "crypto-browserify": "^3.12.0",
     "definitions": "^0.0.2",
     "enzyme": "^3.11.0",
+    "html2canvas": "^1.4.1",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
     "jwt-check-expiration": "^1.0.5",
     "multiselect-react-dropdown": "^2.0.17",
+    "parse5": "^7.1.2",
     "postcss-loader": "^7.0.1",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "query-string": "^7.1.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-cookies": "^0.1.1",
     "react-country-region-selector": "^3.4.0",
     "react-custom-popup": "^1.1.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.8.3",
     "react-i18next": "^11.15.3",
     "react-if": "^4.1.1",
