--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@coreui/coreui-free-react-admin-template",
   "version": "4.1.1",
   "description": "CoreUI Free React Admin Template",
-  "homepage": "https://isnt-emranaloul-awesome.netlify.app/",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
@@ -24,7 +23,7 @@
     "changelog": "auto-changelog --starting-version 4.1.0 --commit-limit false --hide-credit",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.js\"",
-    "start": "react-scripts start",
+    "start": "react-scripts start node --trace-deprecation ",
     "start:n17": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
@@ -34,14 +33,13 @@
     "coreui_library_short_version": "4.1"
   },
   "dependencies": {
-    "@coreui/chartjs": "^3.0.0",
-    "@coreui/coreui": "^4.2.4",
-    "@coreui/icons": "^2.1.0",
-    "@coreui/icons-react": "^2.0.0",
-    "@coreui/react": "^4.1.0",
-    "@coreui/react-chartjs": "^2.0.0",
-    "@coreui/react-pro": "^4.1.4",
-    "@coreui/utils": "^1.3.1",
+    "@coreui/chartjs": "^3.1.2",
+    "@coreui/coreui": "^4.3.2",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
+    "@coreui/react": "^4.8.0",
+    "@coreui/react-chartjs": "^2.1.3",
+    "@coreui/utils": "^2.0.2",
     "@react-pdf/renderer": "^2.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
@@ -61,9 +59,9 @@
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
-    "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.5.1",
     "jwt-check-expiration": "^1.0.5",
+    "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^2.0.17",
     "parse5": "^7.1.2",
     "postcss-loader": "^7.0.1",
@@ -98,14 +96,15 @@
     "react-error-overlay": "6.0.9"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "ajv": "^7.2.4",
     "auto-changelog": "~2.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "node-sass": "^9.0.0",
     "prettier": "2.5.0",
-    "react-error-overlay": "6.0.9",
-    "sass": "^1.54.5"
+    "react-error-overlay": "6.0.9"
   },
   "engines": {
     "node": ">=10",
