--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "crypto-browserify": "^3.12.0",
     "definitions": "^0.0.2",
     "enzyme": "^3.11.0",
+    "history": "^5.3.0",
     "html2canvas": "^1.4.1",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
