--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-# REACT_APP_API=https://horizon-api-new.onrender.com
+REACT_APP_API=https://horizon-api-new.onrender.com
 GENERATE_SOURCEMAP=false
-REACT_APP_API='http://localhost:5000'
+# REACT_APP_API='http://localhost:5000'
 REACT_APP_SECRET = 12345
 SKIP_PREFLIGHT_CHECK=true
