--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "redux": "4.1.2",
     "redux-thunk": "^2.4.1",
     "simplebar-react": "^2.3.6",
+    "socket.io-client": "^4.7.2",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.4",
     "webpack": "^5.74.0",
